--- a/_config.yml
+++ b/_config.yml
@@ -183,7 +183,8 @@ defaults:
       toc_sticky: true
       header:
         overlay_color: "#333"
-        overlay_image: "/assets/images/banner/banner_model_waist.webp"
+        overlay_image: "/assets/images/banner/banner_model_waist-1024.webp"
+        overlay_image_md: "/assets/images/banner/banner_model_waist-1024.webp"
         overlay_image_alt: "健康資訊文章"
         show_overlay_excerpt: false
       sidebar:
